[gd_scene load_steps=21 format=3 uid="uid://c1duhx14s1f2t"]

[ext_resource type="Script" uid="uid://bsswjy2n5qnwh" path="res://actors/environments/Field.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://baxoilm2twmg1" path="res://assets/shaders/textures/base_texture.png" id="2"]
[ext_resource type="Script" uid="uid://dg3ny04agcjtp" path="res://addons/ECM/Entity.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c3ov7koxwx71p" path="res://addons/ECM/icons/Entity2D.png" id="4"]
[ext_resource type="Script" uid="uid://bx28gpgdlmtid" path="res://addons/ECM/Component.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://boh3pf58gw6ig" path="res://addons/ECM/icons/Component.png" id="6"]
[ext_resource type="Script" uid="uid://bpks12jkkbtqa" path="res://actors/environments/components/Flow.gd" id="7"]
[ext_resource type="PackedScene" path="res://combat/traits/Strategic.tscn" id="8"]
[ext_resource type="Script" uid="uid://jvpjkdrjxxmr" path="res://actors/environments/components/Hill.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://78g30frumggu" path="res://addons/ECM/icons/Component2D.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dfk8r60gptqu" path="res://assets/sprites/environments/crown_symbol.png" id="11"]
[ext_resource type="Script" uid="uid://bvnpkr7wj1wm7" path="res://combat/components/Owned.gd" id="12"]
[ext_resource type="Script" uid="uid://bavhxg3jobcnh" path="res://actors/environments/components/Conquerable.gd" id="13"]
[ext_resource type="Texture2D" uid="uid://oopdo77hrqq5" path="res://assets/sprites/environments/flag.png" id="14"]
[ext_resource type="PackedScene" path="res://actors/environments/IsoPolygon.tscn" id="15"]

[sub_resource type="ShaderMaterial" id="1"]

[sub_resource type="GDScript" id="2"]
script/source = "extends Area2D

# ugly as f
func get_strategy(ship, distance, game_mode):
	return get_parent().get_strategy(ship, distance, game_mode)
	
"

[sub_resource type="RectangleShape2D" id="3"]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(50, 50)

[sub_resource type="ParticleProcessMaterial" id="5"]
resource_local_to_scene = true
emission_shape = 2
emission_sphere_radius = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0

[node name="Field" type="Node2D"]
script = ExtResource("1")
__meta__ = {
"_edit_group_": true
}

[node name="IsoPolygon" parent="." instance=ExtResource("15")]

[node name="Polygon2D" type="Polygon2D" parent="."]
material = SubResource("1")
use_parent_material = true
z_index = 10
z_as_relative = false
color = Color(0.3, 0.3, 0.3, 0.3)
texture = ExtResource("2")
polygon = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)

[node name="Line2D" type="Line2D" parent="."]
self_modulate = Color(1.24, 1.24, 1.24, 1)
z_index = 10
z_as_relative = false
width = 15.0
default_color = Color(0.6, 0.6, 0.6, 0.6)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 10757
gravity_direction = Vector2(0, -0.5)
linear_damp = 1.0
angular_damp = 10.0
script = SubResource("2")

[node name="Strategic" parent="Area2D" instance=ExtResource("8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("3")

[node name="Entity" type="Node2D" parent="Area2D"]
script = ExtResource("3")
__meta__ = {
"_editor_icon": ExtResource("4")
}

[node name="Water" type="Node" parent="Area2D/Entity"]
script = ExtResource("5")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false

[node name="Trigger" type="Node" parent="Area2D/Entity"]
script = ExtResource("5")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false

[node name="Deadly" type="Node" parent="Area2D/Entity"]
script = ExtResource("5")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false

[node name="Flow" type="Node" parent="Area2D/Entity"]
script = ExtResource("7")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false
charge = -10

[node name="CrownDropper" type="Node" parent="Area2D/Entity"]
script = ExtResource("5")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false

[node name="Hill" type="Node2D" parent="Area2D/Entity"]
script = ExtResource("9")
__meta__ = {
"_editor_icon": ExtResource("10")
}

[node name="Crown" type="Sprite2D" parent="Area2D/Entity/Hill"]
texture = ExtResource("11")

[node name="Basket" type="Node" parent="Area2D/Entity"]
script = ExtResource("5")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false

[node name="Owned" type="Node" parent="Area2D/Entity"]
script = ExtResource("12")
__meta__ = {
"_editor_icon": ExtResource("6")
}
enabled = false

[node name="Conquerable" type="Node" parent="Area2D/Entity"]
script = ExtResource("13")
__meta__ = {
"_editor_icon": ExtResource("6")
}

[node name="CrownCollider" type="StaticBody2D" parent="."]
visible = false
collision_layer = 32768
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrownCollider"]
shape = SubResource("4")
disabled = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 2.0
fract_delta = false
process_material = SubResource("5")

[node name="Flag" type="Sprite2D" parent="."]
texture = ExtResource("14")

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
